<resources>
    <string name="app_name">Tic Tac-Toe game</string>
    <string name="one_player_button_label">1 Player</string>
    <string name="two_players_button_label">2 Players</string>
    <string name="headline">TIC TAC TOE</string>
    <string name="two_dots">:</string>
    <string name="player_count">0</string>
    <string name="new_game_button_label">NEW GAME</string>
    <string name="reset_game_button_label">RESET GAME</string>
    <string name="top_left_image_description">top left game board part</string>
    <string name="top_image_description">top game board part</string>
    <string name="top_right_image_description">top right game board part</string>
    <string name="middle_left_image_description">middle left game board part</string>
    <string name="middle_image_description">middle game board part</string>
    <string name="middle_right_image_description">middle right game board part</string>
    <string name="bottom_left_image_description">bottom left game board part</string>
    <string name="bottom_image_description">bottom game board part</string>
    <string name="bottom_right_image_description">bottom right game board part</string>
    <string name="player_one">P1</string>
    <string name="player_two">P2</string>
</resources>